--- a/views/admin/coursesPlan.ejs
+++ b/views/admin/coursesPlan.ejs
@@ -45,7 +45,7 @@
             Details
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/admin/coursesPlan/<%= item.id%>/<%= item.rev %>">Kelola Dosen</a>
+              <a class="dropdown-item" href="/admin/coursesPlan/<%= item.id %>">Kelola Dosen</a>
               <a class="dropdown-item" href="/admin/petaCplCpmk/<%= item.id%>">Peta CPMK ke CPL</a>
               <a class="dropdown-item" href="/admin/persentaseRps">Persentase RPS</a>
             </div>
