--- a/views/admin/dosenPengampu.ejs
+++ b/views/admin/dosenPengampu.ejs
@@ -28,7 +28,7 @@
     <tbody>
       <% pengampu.forEach((item,i) => { %>
       <tr>
-        <% if(item.lecturer == null) {  %>
+        <% if(item.id == null) {  %>
         <td scope="row"><%= i+1 %></td>
         <td class="text-center" scope="col"></td>
         <td class="text-center" scope="col"></td>
