--- a/views/dosen/cetakRps.ejs
+++ b/views/dosen/cetakRps.ejs
@@ -13,7 +13,7 @@
    
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body>
+<body onload="window.print()">
     <div class="main">
           <div class="content">
             <% items.forEach((item) => { %>
@@ -57,8 +57,8 @@
                         <tr>
                           <td rowspan="2" colspan="2" class="font-weight">OTORISASI</td>
                           <td colspan="2" class="grey">Dosen Pengembang RPS</td>
-                          <td colspan="3" class="grey">Koordinator Rumpun MK</td>
-                          <td colspan="3" class="grey">KA Program Studi</td>
+                          <td colspan="2" class="grey">Koordinator Rumpun MK</td>
+                          <td colspan="4" class="grey">KA Program Studi</td>
                         
                         </tr>
                         <tr>
@@ -67,8 +67,8 @@
                           <%= res.name %>
                           <% })}) %>
                           </td>
-                          <td colspan="3"></td>
-                          <td colspan="3"></td>
+                          <td colspan="2"></td>
+                          <td colspan="4"></td>
                           
                         </tr>
               
@@ -77,35 +77,35 @@
                           
                         </tr>
                         <tr>
-                            <td colspan="2"></td>
-                            <td colspan="8" class="grey">CP Program Studi</td>
+                            <td colspan="1"></td>
+                            <td colspan="9" class="grey">CP Program Studi</td>
                         </tr>
                         <tr>
-                          <td colspan="2" class="hidden" ></td>
+                          <td  class="hidden" ></td>
                           <td>CP-1</td>
-                          <td colspan="7">Mengidentifikasi</td>
+                          <td colspan="8">Mengidentifikasi</td>
                         </tr>
     
                         <tr>
-                          <td colspan="2"></td>
-                          <td colspan="8" class="grey">CP Mata Kuliah</td>
+                          <td ></td>
+                          <td colspan="9" class="grey">CP Mata Kuliah</td>
                         </tr>
               
                         <% items.forEach((data) => { data.course_los.forEach((res) => { %>
                         <tr>
-                          <td colspan="2"></td>
+                          <td ></td>
                           <td><%= res.code %></td>
-                          <td colspan="7"><%= res.name %></td>
+                          <td colspan="8"><%= res.name %></td>
                         </tr>
                         <% })}) %> <% items.forEach((item) => { %>
                         <tr>
-                          <td colspan="2" class="font-weight">Deskripsi Singkat Mata Kuliah</td>
-                          <td colspan="8"><%= item.description %></td>
+                          <td  class="font-weight">Deskripsi Singkat Mata Kuliah</td>
+                          <td colspan="9"><%= item.description %></td>
                         </tr>
               
                         <tr>
-                          <td colspan="2" class="font-weight">Materi Pembelajaran/Pokok Bahasan</td>
-                          <td colspan="8"><%= item.material %></td>
+                          <td  class="font-weight">Materi Pembelajaran/Pokok Bahasan</td>
+                          <td colspan="9"><%= item.material %></td>
                         </tr>
               
                         <tr>
@@ -226,7 +226,7 @@
     </div>
 
       <script>
-        window.print();
+        
       </script>
 
 </body>
