--- a/views/dosen/add_cpmk.ejs
+++ b/views/dosen/add_cpmk.ejs
@@ -42,7 +42,7 @@
       .catch((error) => console.log(error));
   }
   function page() {
-    window.location = "./CPMK";
+    window.location.href = "./CPMK";
   }
 </script>
 <%- include('../partials/footer'); -%>
