view add back update

--- a/views/dosen/course_plan.ejs
+++ b/views/dosen/course_plan.ejs
@@ -19,13 +19,13 @@
                           <a class="nav-link" href="/dosen/<%= item.id %>/<%= item.rev %>/CPMK">CPMK  /</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/dosen/<%= item.id %>/referensi">Referensi  /</a>
+                            <a class="nav-link" href="/dosen/<%= item.id %>/<%= item.rev %>/referensi">Referensi  /</a>
                           </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="/dosen/<%= item.id %>/penilaian">Penilaian  /</a>
+                        <a class="nav-link" href="/dosen/<%= item.id %>/<%= item.rev %>/penilaian">Penilaian  /</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/dosen/<%= item.id %>/pertemuan">Pertemuan</a>
+                            <a class="nav-link" href="/dosen/<%= item.id %>/<%= item.rev %>/pertemuan">Pertemuan</a>
                           </li>
                       </ul>
                     </div>
