--- a/views/dosen/referensi.ejs
+++ b/views/dosen/referensi.ejs
@@ -2,11 +2,13 @@
 <link rel="stylesheet" href="/public/css/table.css" />
 <div id="container">
   <div class="">
-    <h1 class="navbar-brand mb-3">Daftar Referensi</h1>
-    <div class="d-flex justify-content-end">
+    <h1 class="navbar-brand mb-5">Daftar Referensi</h1>
+    <div class="d-flex justify-content-between">
+      <% items.forEach((item) => { %>
+      <a class="button100-form-btn btn-head back ms-0" role="button" href="/dosen/coursesPlan/<%= item.id %>/<%= item.rev %>/"><% }) %><i class="bx bx-subdirectory-left"></i></a>
       <button class="button100-form-btn btn-head">
         <% items.forEach((item) => { %>
-        <a href="/dosen/<%= item.course_plan_id %>/add-referensi" class=""><% }) %> TAMBAH </a>
+        <a href="/dosen/<%= item.id %>/<%= item.rev %>/add-referensi" class=""><% }) %> TAMBAH </a>
       </button>
     </div>
     <div class="row">
@@ -26,20 +28,20 @@
 
             <tbody>
               <tr class="alert">
-                <% items.forEach((item) => { %>
+                <% items.forEach((res) => { res.course_plan_references.forEach((item) => { %>
                 <td><%= item.title %></td>
                 <td><%= item.author %></td>
                 <td><%= item.publisher %></td>
                 <td><%= item.year %></td>
                 <td><%= item.description %></td>
                 <td width="250px">
-                  <a class="editb" href="/dosen/<%= item.course_plan_id %>/edit-referensi/<%= item.id %>"><i class="bx bxs-edit" style="color: #624de3"></i></a>
-                  <form action="/dosen/<%= item.course_plan_id %>/referensi/<%= item.id %>?_method=DELETE" onsubmit="hapus()" class="d-inline" method="post">
+                  <a class="editb" href="/dosen/<%= item.course_plan_id %>/<%= res.rev %>/edit-referensi/<%= item.id %>"><i class="bx bxs-edit" style="color: #624de3"></i></a>
+                  <form action="/dosen/<%= item.course_plan_id %>/<%= res.rev %>/referensi/<%= item.id %>?_method=DELETE" onsubmit="hapus()" class="d-inline" method="post">
                     <button type="submit" class="editb"><i class="bx bx-trash" style="color: #a30d11"></i></button>
                   </form>
                 </td>
               </tr>
-              <% }) %>
+              <%})}) %>
             </tbody>
           </table>
         </div>
@@ -57,26 +59,26 @@
       })
       .catch((error) => console.log(error));
   }
-  function hapus(){
-        Swal.fire({
-        title: 'Are you sure?',
-        text: "You won't be able to revert this!",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, delete it!'
-      }).then((result) => {
-        if (result.isConfirmed) {
-          Swal.fire("Good job!", "Data deleted", "success")
+  function hapus() {
+    Swal.fire({
+      title: "Are you sure?",
+      text: "You won't be able to revert this!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, delete it!",
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire("Good job!", "Data deleted", "success")
           .then(function () {
             window.setTimeout(function () {
               window.location = "./referensi";
             }, 700);
           })
           .catch((error) => console.log(error));
-        }
-      })
+      }
+    });
   }
 </script>
 <%- include('../partials/footer'); -%>
