--- a/views/admin/coursesPlan.ejs
+++ b/views/admin/coursesPlan.ejs
@@ -46,7 +46,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="/admin/coursesPlan/<%= item.id %>/<%= item.rev %>">Kelola Dosen</a>
-              <a class="dropdown-item" href="/admin/petaCplCpmk/<%= item.id%>">Peta CPMK ke CPL</a>
+              <a class="dropdown-item" href="/admin/petaCplCpmk/<%= item.id%>/<%= item.rev %>"">Peta CPMK ke CPL</a>
               <a class="dropdown-item" href="/admin/persentaseRps">Persentase RPS</a>
             </div>
         </td>
